--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,75 @@
-node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Node Modules
+node_modules/
+
+# Build Output
+.next/
+out/
+build/
+
+# Static Bundles
+*.css.map
+*.js.map
+
+# Local Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Next.js Cache
+.next/cache/
+
+# Typescript
+*.tsbuildinfo
+
+# Testing
+coverage/
+.nyc_output/
+.vscode-test/
+
+# Production Environment
+.DS_Store
+Thumbs.db
+
+# IDE/Editor Settings
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Temporary Files
+*.swp
+*.temp
+*.tmp
+*.bak
+*.backup
+*.orig
+*.save
+
+# macOS System Files
+.DS_Store
+
+# Windows System Files
+Thumbs.db
+
+# Package Manager Files
+.pnpm-debug.log
+yarn.lock
+package-lock.json
+
+# Linting
+.eslintcache
+.stylelintcache
+
+# Optional: Ignore public/uploads or other folders containing large files or sensitive data
+/public/uploads/
